# Learn-WebAssembly

./: README.md
chapter-03-dev-env/: README.md  index.html  stuff.html
chapter-04-installing-deps/: Makefile  README.md  main.c  main.wat
chapter-05-create-load-module/: Makefile  README.md  custom-loading.html  with-glue.c  without-glue.c  without-glue.html
chapter-06-interact-with-js/: Makefile  README.md  js-with-glue.c  js-with-glue.html  js-without-glue.cpp  js-without-glue.html
chapter-07-cook-the-books/: Makefile  README.md  package-lock.json  package.json
chapter-07-cook-the-books/config/: data.json  setup-api.js
chapter-07-cook-the-books/lib/: main.c
chapter-07-cook-the-books/src/: index.html  main.js  styles.css
chapter-07-cook-the-books/src/assets/: main.wasm
chapter-07-cook-the-books/src/components/: App.js
chapter-08-tetris/: README.md
chapter-08-tetris/output-native/: CMakeLists.txt  README.md
chapter-08-tetris/output-native/src/: board.cpp  board.h  constants.h  game.cpp  game.h  main.cpp  piece.h
chapter-08-tetris/output-wasm/: Makefile  README.md
chapter-09-node/: README.md
chapter-09-node/server-example/: package-lock.json  package.json  requests.js
chapter-09-node/testing-example/: package-lock.json  package.json
chapter-09-node/webpack-example/: package-lock.json  package.json  webpack.config.js
chapter-10-advanced-tools/: README.md
chapter-10-advanced-tools/compile-with-llvm/: Makefile  index.html  main.cpp
chapter-10-advanced-tools/parallel-wasm/: Makefile
common/: load-wasm.js
(+43 files in other folders)
